tests/fail/string-index-assign-type.virtue
a = "Hello"
a[2] = "cursed"

# error: type error
#  --> test.virtue:2:8
#    |
#  2 | a[2] = "cursed"
#    |        ^^^^^^^^ expected i8, found string
#
